<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actionbar_activities.CalculatorActivity">

    <LinearLayout
        android:id="@+id/rvCalculations"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCalculations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:textAlignment="viewEnd"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textAlignment="viewEnd"
            android:textSize="55sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/glNumbers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvCalculations"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_rowWeight="1"
            android:onClick="handleNumClick"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:onClick="handleNumClick"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:onClick="handleNumClick"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:onClick="handleNumClick"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:onClick="handleNumClick"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:onClick="handleNumClick"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:onClick="handleNumClick"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:onClick="handleNumClick"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:onClick="handleNumClick"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_gravity="fill_vertical"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="100dp"
            android:layout_rowWeight="1"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="100dp"
            android:layout_rowWeight="1"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="deleteFromCalculation"
            android:text="@string/delete"
            android:enabled="false"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvCalculations"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/glNumbers"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleOpClick"
            android:text="@string/divide" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleOpClick"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleOpClick"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleOpClick"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleOpClick"
            android:text="@string/equals" />
    </LinearLayout>
</RelativeLayout>